# mini-llm-transformer

./: .gitignore  ARCHITECTURE.md  COLAB.md  README.md  USAGE.md  fetch_wikipedia.py  generate.py  model.py  pyproject.toml  tokenizer.py  train.py
data/: training_text.txt  training_text_simple.txt
docs/en/: ARCHITECTURE.md  COLAB.md  README.md  USAGE.md
docs/explainers/: attention-head.html  attention-head.md  how-it-works.md  math-basics.html  math-basics.md  neural-networks.md
