[project]
name = "llm-mini-transformer"
version = "0.1.0"
description = "A minimal Decoder-Only Transformer for learning and experimentation"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch>=2.2.0",
    "tqdm>=4.66.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
train = "train:main"

[tool.uv]
python-preference = "managed"
